# project1

./: ArtObject.h  ArtRepository.h  ArtRepositoryInterface.h  CMakeLists.txt  ChatDialog.h  Command.h  DigitalArt.h  MainWindow.cpp  MainWindow.h  Painting.h  Sculpture.h  api.cpp  api.h  artobject.cpp  artrepository.cpp  csvrepository.cpp  csvrepository.h  digitalart.cpp  jsonrepository.cpp  jsonrepository.h  main.cpp  mainwindow.ui  painting.cpp  sculpture.cpp  test.cpp  test.h
